--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,17 @@
-<mat-toolbar>
-  <button mat-icon-button></button>
-  <mat-icon>home</mat-icon>
+<div class="navbarContainer">
+  <mat-toolbar>
+    <div class="buttonDiv">
+      <button mat-icon-button (click)="goBack()">
+        <mat-icon>keyboard_backspace</mat-icon>
+      </button>
 
-  <div class="appName">Golf Scorecard</div>
-</mat-toolbar>
+      <button mat-icon-button routerLink="./course-selection">
+        <mat-icon>home</mat-icon>
+      </button>
+    </div>
+
+    <div class="appNameDiv">
+      <div>Golf Scorecard</div>
+    </div>
+  </mat-toolbar>
+</div>
