Got the API to pull without CORS error, needs tuning to pull the courses into the HTML.

--- a/src/app/components/course-selection/course-selection.component.html
+++ b/src/app/components/course-selection/course-selection.component.html
@@ -1,1 +1,5 @@
-<p>course-selection works!</p>
+<mat-card>
+  <div *ngFor="let course of $courses | async">
+    {{ course[0].id }}
+  </div>
+</mat-card>
