--- a/src/app/components/course-selection/course-selection.component.html
+++ b/src/app/components/course-selection/course-selection.component.html
@@ -1,8 +1,10 @@
-<mat-card>
-  <div *ngFor="let course of courses" class="courseDiv">
-    <img src="{{ course.image }}" />
-    <div class="courseName">
-      {{ course.name }}
+<div class="courseContainer">
+  <mat-card class="coursesCard">
+    <div *ngFor="let course of courses" class="courseDiv">
+      <img src="{{ course.image }}" (click)="selectCourse(course.id)" />
+      <div class="courseName">
+        {{ course.name }}
+      </div>
     </div>
-  </div>
-</mat-card>
+  </mat-card>
+</div>
