--- a/src/app/components/course-selection/course-selection.component.scss
+++ b/src/app/components/course-selection/course-selection.component.scss
@@ -1,6 +1,23 @@
-img {
-  max-width: 18em;
-  max-height: 18em;
-  object-fit: contain;
-  margin-bottom: 8px;
+.coursesCard {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ebebeb;
+
+  img {
+    width: 240px;
+    height: 190px;
+    object-fit: fill;
+    margin-bottom: 8px;
+    border: 1px solid black;
+    box-shadow: 1px 2px;
+  }
+
+  .courseName {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 18px;
+  }
 }
