--- a/src/app/components/course-info/course-info.component.scss
+++ b/src/app/components/course-info/course-info.component.scss
@@ -1,23 +1,61 @@
-.courseInfoCard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.singleCourseContainer {
+  height: 90%;
 
-  .courseInfoTitle {
-    margin-bottom: 12px;
-  }
-
-  .mainInfo {
+  .courseInfoCard {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+    height: 100%;
 
-  .thumbnail {
-    width: 300px;
-    height: 180px;
-    object-fit: fill;
-    border: 1px solid black;
-    box-shadow: 1px 2px;
+    .courseInfoTitle {
+      margin-bottom: 12px;
+    }
+
+    .mainInfo {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .thumbnail {
+      width: 300px;
+      height: 180px;
+      object-fit: fill;
+      border: 1px solid black;
+      box-shadow: 1px 2px;
+      margin-top: 20px;
+    }
+
+    .teeTypeTitle {
+      margin-top: 40px;
+    }
+
+    .yardageContainer {
+      display: flex;
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    .bottomSection {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      justify-content: flex-end;
+      text-align: center;
+
+      .playerList {
+        margin-bottom: 8px;
+      }
+
+      .addPlayers {
+        display: flex;
+        margin-bottom: 5px;
+      }
+
+      .buttonDiv {
+        margin-left: 5px;
+      }
+    }
   }
 }
