--- a/src/app/components/course-info/course-info.component.scss
+++ b/src/app/components/course-info/course-info.component.scss
@@ -48,6 +48,10 @@
         margin-bottom: 8px;
       }
 
+      .players {
+        margin-bottom: 20px;
+      }
+
       .addPlayers {
         display: flex;
         margin-bottom: 5px;
