--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -13,5 +13,9 @@
     <div class="appNameDiv">
       <div>Golf Scorecard</div>
     </div>
+
+    <button mat-icon-button>
+      <mat-icon>save</mat-icon>
+    </button>
   </mat-toolbar>
 </div>
