Changed some routing and navbar. Added CSS for scorecard to add overflow: scroll when 3-4 players are on the card. Working on the yardage and display of yards on the scorecard, will not compile at the time of this commit.

--- a/src/app/components/course-info/course-info.component.html
+++ b/src/app/components/course-info/course-info.component.html
@@ -17,16 +17,20 @@
       <img class="thumbnail" src="{{ data.thumbnail }}" />
       <div class="teeTypeTitle">TeeTypes:</div>
       <div class="yardageContainer">
-        <div class="teeTypes">Pro Yardage: {{ getYardage("pro") }}</div>
+        <div class="teeTypes">Pro Yardage: {{ setData.getYardage("pro") }}</div>
         <div class="teeTypes">
-          Champion Yardage: {{ getYardage("champion") }}
+          Champion Yardage: {{ setData.getYardage("champion") }}
         </div>
-        <div class="teeTypes">Men Yardage: {{ getYardage("men") }}</div>
-        <div class="teeTypes">Women Yardage: {{ getYardage("women") }}</div>
+        <div class="teeTypes">Men Yardage: {{ setData.getYardage("men") }}</div>
+        <div class="teeTypes">
+          Women Yardage: {{ setData.getYardage("women") }}
+        </div>
       </div>
     </div>
     <div class="bottomSection">
-      <div class="playerList">Player List (4):</div>
+      <div class="playerList">
+        Player List ({{ maxPlayers - setData.players.length }}):
+      </div>
       <div *ngFor="let player of setData.players" id="players" class="players">
         {{ player.name }}
       </div>
@@ -42,6 +46,7 @@
             id="nameInput"
             type="text"
             placeholder="Player Name"
+            (keydown)="addPlayers($event)"
             [formControl]="playerName"
           />
         </div>
