--- a/src/app/components/scorecard/scorecard.component.html
+++ b/src/app/components/scorecard/scorecard.component.html
@@ -2,11 +2,11 @@
   <mat-card class="scoreCard">
     <div class="teeChange">
       <div>Change Tee:</div>
-      <select>
-        <option>Pro</option>
-        <option>Champion</option>
-        <option>Men</option>
-        <option>Women</option>
+      <select id="teeDropDown">
+        <option value="pro">Pro</option>
+        <option value="champion">Champion</option>
+        <option value="men">Men</option>
+        <option value="women">Women</option>
       </select>
     </div>
     <table class="scorecardTable">
