--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -4,18 +4,26 @@
       <button mat-icon-button (click)="goBack()">
         <mat-icon>keyboard_backspace</mat-icon>
       </button>
-
-      <button mat-icon-button routerLink="./course-selection">
-        <mat-icon>home</mat-icon>
-      </button>
     </div>
-
     <div class="appNameDiv">
       <div>Golf Scorecard</div>
     </div>
-
-    <button mat-icon-button>
-      <mat-icon>save</mat-icon>
+    <button
+      mat-icon-button
+      [matMenuTriggerFor]="menu"
+      aria-label="Example icon-button with a menu"
+    >
+      <mat-icon>more_vert</mat-icon>
     </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <mat-icon>save</mat-icon>
+        <span>Save</span>
+      </button>
+      <button mat-menu-item routerLink="./course-selection">
+        <mat-icon>home</mat-icon>
+        <span>Home</span>
+      </button>
+    </mat-menu>
   </mat-toolbar>
 </div>
