--- a/src/app/components/scorecard/scorecard.component.scss
+++ b/src/app/components/scorecard/scorecard.component.scss
@@ -1,10 +1,12 @@
 .scorecardContainer {
   height: 90%;
+  overflow: scroll;
 
   .scoreCard {
     height: 100%;
     max-width: 100%;
     font-size: 14px;
+    overflow: scroll;
 
     .teeChange {
       margin-bottom: 5px;
