--- a/src/app/components/scorecard/scorecard.component.html
+++ b/src/app/components/scorecard/scorecard.component.html
@@ -1,13 +1,17 @@
 <div class="scorecardContainer">
   <mat-card class="scoreCard">
     <div class="teeChange">
-      <div>Change Tee:</div>
-      <select id="teeDropDown">
-        <option value="pro">Pro</option>
-        <option value="champion">Champion</option>
-        <option value="men">Men</option>
-        <option value="women">Women</option>
-      </select>
+      <mat-form-field id="teeDropDown">
+        <mat-label>Change Tee:</mat-label>
+        <mat-select [(ngModel)]="selectedValue" name="teeType">
+          <mat-option
+            *ngFor="let teeType of selectedTeeType"
+            [value]="teeType.name"
+          >
+            {{ teeType.viewName }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
     <table class="scorecardTable">
       <tr>
@@ -21,7 +25,7 @@
         <td class="holeCell">{{ hole.hole }}</td>
         <td class="parCell">{{ hole.teeBoxes[0].par }}</td>
         <td class="hcpCell">{{ hole.teeBoxes[0].hcp }}</td>
-        <td class="yardCell">Yds</td>
+        <td class="yardCell">{{ hole.teeBoxes[0].yards }}</td>
         <td *ngFor="let player of players">
           <input class="playerInput" />
         </td>
@@ -30,7 +34,7 @@
         <td>Out</td>
         <td>x</td>
         <td>Out</td>
-        <td>y</td>
+        <td>{{ outTotalYards }}</td>
         <td *ngFor="let player of players">
           <input value="0" class="playerInput" />
         </td>
@@ -48,7 +52,7 @@
         <td>In</td>
         <td>x</td>
         <td>In</td>
-        <td>y</td>
+        <td>{{ inTotalYards }}</td>
         <td *ngFor="let player of players">
           <input value="0" class="playerInput" />
         </td>
