Added a custom pipe to add a number to the end of a duplicate player name. All functionality currently works still, though the display on the card and player list puts the original name at the bottom.

--- a/src/app/components/course-info/course-info.component.html
+++ b/src/app/components/course-info/course-info.component.html
@@ -43,7 +43,8 @@
         {{ player.name }}
       </div>
       <mat-error *ngIf="playerName.hasError('duplicate')">
-        Duplicate Name
+        Same Name <br />
+        Adding Number...
       </mat-error>
       <div class="addPlayers">
         <div class="playerName">
@@ -60,9 +61,7 @@
             type="button"
             class="addPlayerBtn btn-sm btn-primary"
             (click)="addPlayers($event)"
-            [disabled]="
-              playerName.hasError('duplicate') || setData.players.length >= 4
-            "
+            [disabled]="setData.players.length >= 4"
           >
             Add
           </button>
