Added a link to the course website on the info page, and cleaned up the code a bit.

--- a/src/app/components/course-info/course-info.component.html
+++ b/src/app/components/course-info/course-info.component.html
@@ -15,6 +15,7 @@
       </div>
       <div class="holeCount">Holes: {{ data.holeCount }}</div>
       <img class="thumbnail" src="{{ data.thumbnail }}" />
+      <a href="data.website" class="siteLink">VISIT SITE</a>
       <div class="teeTypeTitle">TeeTypes:</div>
       <div class="yardageContainer">
         <div class="teeTypes">
