--- a/src/app/components/course-info/course-info.component.scss
+++ b/src/app/components/course-info/course-info.component.scss
@@ -27,6 +27,11 @@
       margin-top: 20px;
     }
 
+    .siteLink {
+      font-size: 20px;
+      margin-top: 10px;
+    }
+
     .teeTypeTitle {
       margin-top: 40px;
     }
