--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -16,9 +16,9 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button mat-menu-item routerLink="./saved-games">
         <mat-icon>save</mat-icon>
-        <span>Save</span>
+        <span>Saved Games</span>
       </button>
       <button mat-menu-item routerLink="./course-selection">
         <mat-icon>home</mat-icon>
