--- a/src/app/components/course-selection/course-selection.component.html
+++ b/src/app/components/course-selection/course-selection.component.html
@@ -1,10 +1,15 @@
 <div class="courseContainer">
-  <mat-card class="coursesCard">
+  <mat-card class="coursesCard" *ngIf="isLoaded()">
     <div *ngFor="let course of courses" class="courseDiv">
       <img src="{{ course.image }}" (click)="selectCourse(course.id)" />
       <div class="courseName">
         {{ course.name }}
       </div>
+    </div>
+  </mat-card>
+  <mat-card class="coursesCard">
+    <div class="spinnerDiv">
+      <mat-spinner></mat-spinner>
     </div>
   </mat-card>
 </div>
