--- a/src/app/components/course-selection/course-selection.component.scss
+++ b/src/app/components/course-selection/course-selection.component.scss
@@ -21,3 +21,11 @@
     margin-bottom: 18px;
   }
 }
+
+.spinnerDiv {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
