--- a/src/app/components/save-games/save-games.component.html
+++ b/src/app/components/save-games/save-games.component.html
@@ -1,3 +1,36 @@
 <div class="saveGamesContainer">
-  <mat-card class="saveGamesCard"></mat-card>
+  <mat-card class="saveGamesCard">
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      class="mat-elevation-z8"
+      *ngIf="isLoaded()"
+    >
+      <!-- Position Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.position }}) &nbsp;
+        </td>
+      </ng-container>
+
+      <!-- Players Column -->
+      <ng-container matColumnDef="players">
+        <th mat-header-cell *matHeaderCellDef>Players</th>
+        <td mat-cell *matCellDef="let element">{{ element.players }}</td>
+      </ng-container>
+
+      <!-- Score Column -->
+      <ng-container matColumnDef="totalScore">
+        <th mat-header-cell *matHeaderCellDef>Total Score</th>
+        <td mat-cell *matCellDef="let element">{{ element.totalScore }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <div *ngIf="!isLoaded()" class="spinnerDiv">
+      <mat-spinner></mat-spinner>
+    </div>
+  </mat-card>
 </div>
