--- a/src/app/components/save-games/save-games.component.scss
+++ b/src/app/components/save-games/save-games.component.scss
@@ -3,42 +3,19 @@
 
   .saveGamesCard {
     height: 100%;
+
+    table {
+      width: 100%;
+    }
+
+    .spinnerDiv {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+    }
   }
-}
-
-/* Structure */
-.example-container {
-  position: relative;
-  min-height: 200px;
-}
-
-.example-table-container {
-  position: relative;
-  height: 400px;
-  overflow: auto;
-}
-
-table {
-  width: 100%;
-}
-
-.example-loading-shade {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 56px;
-  right: 0;
-  background: rgba(0, 0, 0, 0.15);
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.example-rate-limit-reached {
-  color: #980000;
-  max-width: 360px;
-  text-align: center;
 }
 
 /* Column Widths */
