--- a/src/app/components/course-selection/course-selection.component.html
+++ b/src/app/components/course-selection/course-selection.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
   </mat-card>
-  <mat-card class="coursesCard">
+  <mat-card class="coursesCard" *ngIf="!isLoaded()">
     <div class="spinnerDiv">
       <mat-spinner></mat-spinner>
     </div>
