Fixed the display of the select for teetype on the scorecard. Was not displaying at all.

--- a/src/app/components/scorecard/scorecard.component.html
+++ b/src/app/components/scorecard/scorecard.component.html
@@ -7,7 +7,7 @@
     >
       Save Game
     </button>
-    <div class="teeChange" *ngIf="player$ | async as player">
+    <div class="teeChange" *ngIf="selectedTeeType">
       <mat-form-field id="teeDropDown">
         <mat-label>Change Tee:</mat-label>
         <mat-select
