--- a/src/app/components/scorecard/scorecard.component.scss
+++ b/src/app/components/scorecard/scorecard.component.scss
@@ -8,12 +8,25 @@
     font-size: 14px;
     overflow: scroll;
 
-    .teeChange {
+    .buttonAndSelect {
+      display: flex;
+      justify-content: space-evenly;
+      height: 40px;
       margin-bottom: 5px;
+
+      .buttonSave {
+        height: 14px;
+      }
     }
 
-    .scorecardTable {
+    .scoreCardDiv {
+      display: flex;
+      justify-content: center;
       height: 95%;
+
+      .scorecardTable {
+        height: 95%;
+      }
 
       th {
         border: 1px solid black;
