--- a/src/app/components/course-info/course-info.component.scss
+++ b/src/app/components/course-info/course-info.component.scss
@@ -1,11 +1,13 @@
 .singleCourseContainer {
   height: 90%;
+  width: 100%;
 
   .courseInfoCard {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
+    width: auto;
 
     .courseInfoTitle {
       margin-bottom: 12px;
@@ -15,7 +17,7 @@
 
     .mainInfo {
       display: flex;
-      flex: 1;
+      width: 100%;
       flex-direction: column;
       align-items: center;
     }
@@ -27,6 +29,11 @@
       border: 1px solid black;
       box-shadow: 1px 2px;
       margin-top: 20px;
+
+      @media (min-width: 850px) {
+        width: 600px;
+        height: 260px;
+      }
     }
 
     .siteLink {
@@ -40,8 +47,20 @@
 
     .yardageContainer {
       display: flex;
+      justify-content: space-around;
+      width: 100%;
       text-align: center;
       margin-top: 10px;
+
+      @media (min-width: 1000px) {
+        width: 1000px;
+      }
+
+      .teeTypes {
+        @media (max-width: 480px) {
+          justify-content: space-between;
+        }
+      }
     }
 
     .bottomSection {
