--- a/src/app/components/course-selection/course-selection.component.scss
+++ b/src/app/components/course-selection/course-selection.component.scss
@@ -1,9 +1,40 @@
 .coursesCard {
-  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  height: 90vh;
   background-color: #ebebeb;
+  flex: 4;
+
+  @media (min-width: 1075px) {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  @media (max-width: 1075px) {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .selectCourseText {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    flex: -1;
+    font-size: 32px;
+    font-weight: 500;
+    text-shadow: 2px 1px;
+    color: #43515b;
+  }
+
+  .courseDiv {
+    display: flex;
+    height: 50%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 3;
+  }
 
   img {
     width: 240px;
