Fixed issue loading all documents from collection to display in the saved games table. Should display properly and only if the table has data. Should also work on refresh of page.

--- a/src/app/components/scorecard/scorecard.component.scss
+++ b/src/app/components/scorecard/scorecard.component.scss
@@ -24,8 +24,13 @@
       justify-content: center;
       height: 95%;
 
+      @media (min-width: 850px) {
+        width: 25%;
+      }
+
       .scorecardTable {
         height: 95%;
+        justify-content: center;
       }
 
       th {
