Added dynamic loading and showing of the save games card and scorecard, removed the back button in favor of a home button since the back button was causing visual issues with yardage display on one of the courses, and added checkboxes to select and delete specific games. Delete should work with selecting multiple or all games too.

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,29 +1,15 @@
 <div class="navbarContainer">
   <mat-toolbar>
     <div class="buttonDiv">
-      <button mat-icon-button (click)="goBack()">
-        <mat-icon>keyboard_backspace</mat-icon>
+      <button mat-icon-button (click)="goHome()">
+        <mat-icon>home</mat-icon>
       </button>
     </div>
     <div class="appNameDiv">
       <div>Golf Scorecard</div>
     </div>
-    <button
-      mat-icon-button
-      [matMenuTriggerFor]="menu"
-      aria-label="Example icon-button with a menu"
-    >
-      <mat-icon>more_vert</mat-icon>
+    <button mat-icon-button routerLink="./saved-games">
+      <mat-icon>save</mat-icon>
     </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item routerLink="./saved-games">
-        <mat-icon>save</mat-icon>
-        <span>Saved Games</span>
-      </button>
-      <button mat-menu-item routerLink="./course-selection">
-        <mat-icon>home</mat-icon>
-        <span>Home</span>
-      </button>
-    </mat-menu>
   </mat-toolbar>
 </div>
