--- a/src/app/components/scorecard/scorecard.component.scss
+++ b/src/app/components/scorecard/scorecard.component.scss
@@ -68,4 +68,12 @@
       width: 10px;
     }
   }
+
+  .spinnerDiv {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
