--- a/src/app/components/save-games/save-games.component.html
+++ b/src/app/components/save-games/save-games.component.html
@@ -1,17 +1,53 @@
 <div class="saveGamesContainer">
   <mat-card class="saveGamesCard">
+    <button
+      mat-raised-button
+      color="primary"
+      class="deleteSelectedBtn"
+      (click)="deleteSelectedFn()"
+    >
+      Delete Selected
+    </button>
     <table
       mat-table
       [dataSource]="dataSource"
       class="mat-elevation-z8"
       *ngIf="isLoaded()"
     >
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="select" class="checkboxContainer">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? masterToggle() : null"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()"
+            [aria-label]="checkboxLabel()"
+          >
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+            [aria-label]="checkboxLabel(row)"
+          >
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
+      <!-- Game Id Column -->
+      <ng-container matColumnDef="gameId">
+        <th mat-header-cell *matHeaderCellDef>Game Id</th>
+        <td mat-cell *matCellDef="let element" class="idCell">
+          {{ element.gameId }}
+        </td>
+      </ng-container>
+
       <!-- Position Column -->
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.position }}) &nbsp;
-        </td>
+        <td mat-cell *matCellDef="let element">{{ element.position }}.</td>
       </ng-container>
 
       <!-- Players Column -->
@@ -22,12 +58,20 @@
 
       <!-- Score Column -->
       <ng-container matColumnDef="totalScore">
-        <th mat-header-cell *matHeaderCellDef>Total Score</th>
-        <td mat-cell *matCellDef="let element">{{ element.totalScore }}</td>
+        <th mat-header-cell *matHeaderCellDef class="totalScoreCell">
+          Total Score
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.totalScore }}
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        (click)="selection.toggle(row)"
+      ></tr>
     </table>
     <div *ngIf="!isLoaded()" class="spinnerDiv">
       <mat-spinner></mat-spinner>
