FULLY fixed the ability to delete all games and refresh AFTER all games have been deleted. Also added CSS to have a better styling on desktop views.

--- a/src/app/components/course-info/course-info.component.html
+++ b/src/app/components/course-info/course-info.component.html
@@ -83,7 +83,7 @@
         class="startBtn btn-sm btn-primary"
         (click)="startGame(cardId)"
       >
-        Start!
+        Save & Start!
       </button>
     </div>
   </mat-card>
