--- a/src/app/components/save-games/save-games.component.scss
+++ b/src/app/components/save-games/save-games.component.scss
@@ -3,9 +3,31 @@
 
   .saveGamesCard {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .deleteBtnDiv {
+      display: flex;
+      justify-content: left;
+      width: 1000px;
+
+      .deleteSelectedBtn {
+        width: 9em;
+        margin-bottom: 8px;
+      }
+    }
+
+    .tableDiv {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
     table {
-      width: 100%;
+      @media (min-width: 1000px) {
+        width: 1000px;
+      }
 
       .mat-column-select {
         width: 30px;
